--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>My First Cloud Deployment</h1>
 <h2>Hello, my name is Keirk Ian V. Avenido</h2>
-<img src="https://i.pinimg.com/1200x/98/58/74/9858745cd157f2797065e639c5b3bf23.jpg/" width="200"/>
+<img src="https://github.com/IanAvenido/My-First-Deployment/commit/3f9fcb266ab86a530fb4b2b92b2d102d53100b3b/" width="200"/>
 <p>This is my first deployed website!</p>
+
