--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>My First Cloud Deployment</h1>
 <h2>Hello, my name is Keirk Ian V. Avenido</h2>
-<img src="https://github.com/IanAvenido/My-First-Deployment/commit/3f9fcb266ab86a530fb4b2b92b2d102d53100b3b/" width="200"/>
+<img src="your-image-filename.jpg" width="200" alt="My Photo"/>
 <p>This is my first deployed website!</p>
 
