--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h1>My First Cloud Deployment</h1>
 <h2>Hello, my name is Keirk Ian V. Avenido</h2>
-<img src="your-image-filename.jpg" width="200" alt="My Photo"/>
+<img src="https://github.com/IanAvenido/My-First-Deployment/blob/main/png.webp" width="200" alt="My Photo"/>
 <p>This is my first deployed website!</p>
+
 
