--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <h1>My First Cloud Deployment</h1>
-<h2>Hello, my name is Keirk Ian V. Avenido</h2>
-<img src="file:///C:/Users/Ian/Downloads/png.webp" width="200" alt="My Photo"/>
+<h2>Hello, my name is Ian Avenido</h2>
+
+<img src="https://i.pinimg.com/736x/5e/2f/f7/5e2ff7c4ad8e0cd994f4962f8c299abc.jpg" width="200"/>
+
 <p>This is my first deployed website!</p>
+
 
 
 
