--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hi, I'm [Keirk Ian Avenido]</h1>
+        <h1>Hi, I'm Keirk Ian Avenido</h1>
         <p>Welcome to my portfolio — showcasing my projects, skills, and journey.</p>
         <a href="#" class="btn">View My Work</a>
     </div>
 </body>
 </html>
+
 
 
 
