--- a/index.html
+++ b/index.html
@@ -1,182 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+<h1>My First Cloud Deployment</h1>
+<h2>Hello, my name is Ian Avenido</h2>
 
-    <style>
-        html {
-            scroll-behavior: smooth;
-        }
+<img src="images.jpg" width="200"/>
 
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            min-height: 100vh;
-            background: linear-gradient(120deg, #000000, #1a1a1a, #000000);
-            background-size: 300% 300%;
-            animation: moveGradient 12s ease infinite;
-            color: white;
-        }
+<p>This is my first deployed website!</p>
 
-        @keyframes moveGradient {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
-        header {
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-        }
-
-        .container {
-            max-width: 800px;
-            padding: 20px;
-        }
-
-        h1 {
-            font-size: 3rem;
-            margin-bottom: 10px;
-        }
-
-        h2 {
-            font-size: 2rem;
-            margin-bottom: 15px;
-        }
-
-        p {
-            font-size: 1.1rem;
-            opacity: 0.85;
-        }
-
-        .btn {
-            margin-top: 25px;
-            display: inline-block;
-            padding: 12px 28px;
-            border: 1px solid white;
-            border-radius: 5px;
-            text-decoration: none;
-            color: white;
-            transition: 0.3s;
-        }
-
-        .btn:hover {
-            background: white;
-            color: black;
-        }
-
-        section {
-            padding: 80px 20px;
-            display: flex;
-            justify-content: center;
-        }
-
-        .card {
-            background: rgba(255, 255, 255, 0.05);
-            border-radius: 10px;
-            padding: 30px;
-            max-width: 800px;
-            width: 100%;
-        }
-
-        .skills, .projects {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 15px;
-        }
-
-        .skill, .project {
-            background: rgba(255, 255, 255, 0.08);
-            padding: 15px;
-            border-radius: 8px;
-            text-align: center;
-        }
-
-        footer {
-            text-align: center;
-            padding: 30px 10px;
-            font-size: 0.9rem;
-            opacity: 0.6;
-        }
-    </style>
-</head>
-
-<body>
-
-    <!-- HERO SECTION -->
-    <header>
-        <div class="container">
-            <h1>Hi, I'm Keirk Ian Avenido</h1>
-            <p>Student | Aspiring Developer | Creative Thinker</p>
-            <a href="#about" class="btn">View My Portfolio</a>
-        </div>
-    </header>
-
-    <!-- ABOUT ME -->
-    <section id="about">
-        <div class="card">
-            <h2>About Me</h2>
-            <p>
-                I am passionate about technology, web development, and learning new skills.
-                I enjoy building projects that improve my creativity and problem-solving abilities.
-            </p>
-        </div>
-    </section>
-
-    <!-- SKILLS -->
-    <section id="skills">
-        <div class="card">
-            <h2>Skills</h2>
-            <div class="skills">
-                <div class="skill">HTML</div>
-                <div class="skill">CSS</div>
-                <div class="skill">JavaScript</div>
-                <div class="skill">Responsive Design</div>
-                <div class="skill">Basic UI/UX</div>
-            </div>
-        </div>
-    </section>
-
-    <!-- PROJECTS -->
-    <section id="projects">
-        <div class="card">
-            <h2>Projects</h2>
-            <div class="projects">
-                <div class="project">
-                    <h3>Portfolio Website</h3>
-                    <p>A personal portfolio showcasing my skills.</p>
-                </div>
-
-                <div class="project">
-                    <h3>Landing Page</h3>
-                    <p>A responsive landing page design.</p>
-                </div>
-
-                <div class="project">
-                    <h3>Mini Web App</h3>
-                    <p>A simple web app built using JavaScript.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section id="contact">
-        <div class="card">
-            <h2>Contact</h2>
-            <p>Email: yourname@email.com</p>
-            <p>Facebook / GitHub / LinkedIn</p>
-        </div>
-    </section>
-
-    <footer>
-        © 2025 Keirk Ian Avenido. All rights reserved.
-    </footer>
-
-</body>
-</html>
